# STM32-L0-qemu-example

./: .gdbinit  .gitmodules  README.md  cross_file.build  cross_gcc.build  main.c  main.h  meson.build  meson_exe_wrapper.sh
src/: arm_semi.h  arm_semi.s  meson.build
tests/: helloWorld.c  meson.build  mustFail.c
